--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						* MHS Makerspace - CTE skills and maker mindset
 					</section>
 					<section>
-						<img src="/assets/makerspace2.jpg">
+						<img src="https://gersteinj.github.io/fablearn17/assets/makerspace2.jpg">
 					</section>
 				</section>
 				<section data-markdown>
