--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</section>
 				</section>
 				<section data-markdown>
-					# What CTE Can Offer
+					# CTE Can Offer
 
 					* Technical skills to support advanced projects
 					* Training in safety and facility design and management
@@ -60,11 +60,11 @@
 					* Existing structure in schools
 				</section>
 				<section data-markdown>
-					# What CTE Needs
+					# CTE Needs
 
 					* More people
 					* Excitement/interest/awareness from general public
-					* Push towards exploration and adapting to change
+					* Push towards adapting to change
 				</section>
 				<section data-markdown>
 					# Why the Gap?
