--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 					* Divide between HS and K-8
 					* Concerns about lack of depth
 					* Resistance to change
+					* Perception of maker ed as a fad, or 'just playing with toys'
 				</section>
 				<section>
 					<section data-markdown>
