--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
 						* Fubar Labs, Power Racing
 						* MHS Makerspace - CTE skills and maker mindset
 					</section>
-					<section>
-						<img src="https://gersteinj.github.io/fablearn17/assets/makerspace2.jpg">
-					</section>
+					<section data-background-image="https://gersteinj.github.io/fablearn17/assets/makerspace2.jpg" data-background-size="contain"></section>
 				</section>
-				<section data-markdown>
-					# CTE Can Offer
-					---
-					* Technical skills to support advanced projects
-					* Training in safety and facility design and management
-					* Experience adapting hands-on, open-ended work to a classroom setting
-					* Equipment and funding
-					* Existing structure in schools
+				<section>
+					<section data-markdown>
+						# CTE Can Offer
+						---
+						* Technical skills to support advanced projects
+						* Training in safety and facility design and management
+						* Experience adapting hands-on, open-ended work to a classroom setting
+						* Equipment and funding
+						* Stability and structure in schools
+					</section>
+					<section data-background-image="https://gersteinj.github.io/fablearn17/assets/car.jpg" data-background-size="contain"></section>
 				</section>
 				<section data-markdown>
 					# CTE Needs
@@ -74,6 +75,14 @@
 					* Concerns about lack of depth
 					* Resistance to change
 					* Perception of maker ed as a fad, or 'just playing with toys'
+				</section>
+				<section>
+					<h1>Maker Mindset and CTE Skills</h1>
+					<section>
+						<section data-background-image="https://gersteinj.github.io/fablearn17/assets/armor.jpg" data-background-size="contain"></section>
+						<section data-background-image="https://gersteinj.github.io/fablearn17/assets/clipboard.jpg" data-background-size="contain"></section>
+						<section data-background-video="https://gersteinj.github.io/fablearn17/assets/driving.mp4" data-background-size="contain"></section>
+					</section>
 				</section>
 				<section>
 					<section data-markdown>
