--- a/index.html
+++ b/index.html
@@ -77,12 +77,10 @@
 					* Perception of maker ed as a fad, or 'just playing with toys'
 				</section>
 				<section>
-					<h1>Maker Mindset and CTE Skills</h1>
-					<section>
+						<section><h1>Maker Mindset and CTE Skills</h1></section>
 						<section data-background-image="https://gersteinj.github.io/fablearn17/assets/armor.jpg" data-background-size="contain"></section>
 						<section data-background-image="https://gersteinj.github.io/fablearn17/assets/clipboard.jpg" data-background-size="contain"></section>
 						<section data-background-video="https://gersteinj.github.io/fablearn17/assets/driving.mp4" data-background-size="contain"></section>
-					</section>
 				</section>
 				<section>
 					<section data-markdown>
